--- a/index.html
+++ b/index.html
@@ -194,37 +194,37 @@
 
             <div class="center">
                 <div class="carousel-container">
-                    <div class="carousel-track">
+                    <div class="carousel-track slick-carousel">
                         <div class="card-img">
-                            <img src="images/indigena.png" alt="">
+                            <img src="https://picsum.photos/id/270/300/360" alt="">
                             <div class="card-texto">
                                 <h2>Lorem Ipsum 1</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                             </div>
                         </div>
                         <div class="card-img">
-                            <img src="images/largo.jpeg" alt="">
+                            <img src="https://picsum.photos/id/230/300/360" alt="">
                             <div class="card-texto">
                                 <h2>Lorem Ipsum 2</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                             </div>
                         </div>
                         <div class="card-img">
-                            <img src="images/imagem-1.png" alt="">
+                            <img src="https://picsum.photos/id/250/300/360" alt="">
                             <div class="card-texto">
                                 <h2>Lorem Ipsum 3</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                             </div>
                         </div>
                         <div class="card-img">
-                            <img src="images/imagem-2.png" alt="">
+                            <img src="https://picsum.photos/id/255/300/360" alt="">
                             <div class="card-texto">
                                 <h2>Lorem Ipsum 4</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                             </div>
                         </div>
                         <div class="card-img">
-                            <img src="images/rio.png" alt="">
+                            <img src="https://picsum.photos/id/260/300/360" alt="">
                             <div class="card-texto">
                                 <h2>Lorem Ipsum 5</h2>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
@@ -243,7 +243,7 @@
 
         <section class="news">
             <div class="w100 center">
-                <h1>NEWS</h1>
+                <h1>NOTÍCIAS</h1>
             </div>
             <div class="w100 center">
                 <div class="container-news">
@@ -266,7 +266,7 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         </div>
                         <div class="card-news">
-                            <div class="news-image" style="background-image: url(https://picsum.photos/id/240/500/500);"></div>
+                            <div class="news-image" style="background-image: url(https://picsum.photos/id/201/500/500);"></div>
                             <h2>Reuniões</h2>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         </div>
@@ -385,10 +385,41 @@
 <script>
     $(document).ready(function(){
         $('.carousel-news').slick({
-            slidesToShow: 4,
+            slidesToShow: 5,
             slidesToScroll: 1,
+            infinite: true,
+            autoplay: true,
+            autoplaySpeed: 2000,
             prevArrow: $('.card-news-prev'),
             nextArrow: $('.card-news-next'),
+            responsive: [
+                {
+                    breakpoint: 768,
+                    settings: {
+                        slidesToShow: 2,
+                        slidesToScroll: 1
+                    }
+                },
+                {
+                    breakpoint: 480,
+                    settings: {
+                        slidesToShow: 1,
+                        slidesToScroll: 1
+                    }
+                }
+            ]
+        });
+    });
+
+    $(document).ready(function(){
+        $('.carousel-track').slick({
+            slidesToShow: 4,
+            slidesToScroll: 1,
+            prevArrow: $('.card-img-prev'),
+            nextArrow: $('.card-img-next'),
+            infinite: true,
+            autoplay: true,
+            autoplaySpeed: 4000,
             responsive: [
                 {
                     breakpoint: 768,
